# word-of-day

./: Cargo.toml  spin.toml
.github/workflows/: static.yml
src/: lib.rs
static/: cooldown.html  cooldown.js  dashboard.html  dashboard.js  global.css  index.html  index.js  utils.js
