[package]
name = "word-of-day"
authors = ["CreggEgg <eggcregg@gmail.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
maud = "0.26.0"
querystring = "1.1.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sha3 = "0.10.8"
spin-sdk = "3.0.1"

[workspace]
